tests/snapshots/codegen_snapshot_tests__rfc041_capability_bounds_full.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
fn run_all<T: Send + Sync + 'static>(_value: T) {
    ();
}
fn run_fn<F: Fn<i64> + Send>(_f: F) {
    ();
}
fn run_fn_mut<F: FnMut<i64> + Sync>(_f: F) {
    ();
}
fn run_fn_once<F: FnOnce<i64> + 'static>(_f: F) {
    ();
}
fn main() {
    ();
}
